--- a/index.html
+++ b/index.html
@@ -38,16 +38,29 @@
         <div class="col-md-3">
           <form class="bg-dark">
             <p>Filter Search</p>
-          <ul class="list-group" class="bg-dark">
-            <li class="bg-dark">
-              <label for="date">Enter Date</label>
+          <ul class="list-group bg-dark">
+            <li class="list-group-item bg-dark">
+              <label for="date" >Enter Date</label>
               <input type="text" placeholder="1/10/2010" id="datetime" />
+            </li> 
+            <li class="list-group-item bg-dark">
+              <label for="city" >Enter a City</label><br>
+              <input type="text" placeholder="roswell" id="city" />
             </li>
-            <li class="bg-dark">
-              <button id="filter-btn" type="button" class="btn btn-dark">Filter Table</button>
+            <li class="list-group-item bg-dark">
+              <label for="state" >Enter a State</label><br>
+              <input type="text" placeholder="ca" id="state" />
+            </li>
+            <li class="list-group-item bg-dark">
+              <label for="country" >Enter a Country</label><br>
+              <input type="text" placeholder="us" id="country" />
+            </li>
+            <li class="list-group-item bg-dark">
+              <label for="shape" >Enter a Shape</label><br>
+              <input type="text" placeholder="circle" id="shape" />
             </li>
           </ul>
-        </form>
+          </form>
         </div>
         <div class="col-md-9">
           <table class="table table-striped">
